# Control_Sistem

./: README.md  pyproject.toml
src/: alert_state.py  main.py  restricted_zones.json  zone_editor.py
